<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/apetizerMenu"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="8dp">

    <ImageView
        android:id="@+id/main_course_1_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/main_course_1"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/main_course_1_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_course_1"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/main_course_1_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_course_1_description"
        android:textAlignment="center"

        />
    <ImageView
        android:id="@+id/main_course_2_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/main_course_2"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/main_course_2_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_course_2"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/main_course_2_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_course_2_description"
        android:textAlignment="center"

        />
    <ImageView
        android:id="@+id/main_course_3_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/main_course_3"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/main_course_3_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_course_3"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/main_course_3_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_course_3_description"
        android:textAlignment="center"
        />
</LinearLayout>
