<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    tools:context=".MainActivity"
    android:background="@drawable/restaurant_background">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/restaurantTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restaurantName"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:textAlignment="center"
        />

    <LinearLayout
        android:id="@+id/mainMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/apetizerButton"
            android:layout_width="300dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/apetizer"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/main_courseButton"
            android:layout_width="300dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/main_course"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/dessertButton"
            android:layout_width="300dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dessert"
            android:layout_gravity="center"
            />
    </LinearLayout>

</LinearLayout>
