<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/apetizerMenu"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="8dp">

    <ImageView
        android:id="@+id/apetizer1_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/apetizer_1"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/apetizer1_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apetizer_1"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/apetizer1_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apetizer_1_description"
        />
    <ImageView
        android:id="@+id/apetizer2_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/apetizer_2"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/apetizer2_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apetizer_2"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/apetizer2_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apetizer_2_description"
        />
    <ImageView
        android:id="@+id/apetizer3_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/apetizer_3"
        android:layout_gravity="center"
        />
    <TextView
        android:id="@+id/apetizer3_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apetizer_2"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/apetizer3_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apetizer_3_description"
        />
</LinearLayout>
